# integer-bench

./: README  cabal.project  integer-bench.cabal  package.yaml  run.sh  stack.yaml
integer-simple/: integer-simple.cabal
integer-simple/GHC/Integer/: Simple.hs
integer-simple/GHC/Integer/Simple/: Internals.hs  Logarithms.hs  Type.hs
integer-simple/GHC/Integer/Simple/Logarithms/: Internals.hs
src/: Bench.hs  BenchValues.hs
