cabal-version: 1.12

name:           integer-bench
version:        0.1
description:    Comparing Integer and Natural implementations
homepage:       https://github.com/hsyl20/integer-bench#readme
bug-reports:    https://github.com/hsyl20/integer-bench/issues
author:         Sylvain HENRY
maintainer:     sylvain@haskus.fr
copyright:      Sylvain HENRY 2020
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/hsyl20/integer-bench

executable integer-bench
  default-language: Haskell2010
  main-is: Bench.hs
  hs-source-dirs:
      src
  other-modules:
      BenchValues
  ghc-options: -Wall -O2 -fobject-code
  build-depends:
      base >=4.8 && <5
    , criterion-measurement
